--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,7 @@
         android:orientation="vertical"
         android:divider="@null"
         android:dividerHeight="0dp"
-        android:id="@+id/list"
-        tools:listitem="@layout/list_item"/>
+        android:id="@+id/list" />
 
     <TextView
         android:layout_width="wrap_content"
